--- a/android/build.gradle
+++ b/android/build.gradle
@@ -72,7 +72,12 @@ repositories {
 
 dependencies {
     // noinspection GradleDynamicVersion
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.facebook.react:react-native:+'  // From node_modules
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.squareup.okio:okio:1.15.0'
     implementation fileTree(dir: "libs", include: ["*.aar"])
 }
 
