--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-config": "^1.4.1",
     "react-native-facetec": "link:../"
   },
   "devDependencies": {
