--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "LICENSE"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
     "react-native": ">=0.60.0-rc.0 <1.0.x"
   },
   "devDependencies": {
+    "auto-changelog": "^2.2.1",
     "react": "^16.9.0",
     "react-native": "^0.61.5"
   }
