--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-facetec",
+  "name": "@gooddollar/react-native-facetec",
   "title": "React Native module that integrates FaceTec face verification API",
   "version": "1.0.1",
   "description": "React Native module that integrates FaceTec face verification API",
