--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "readmeFilename": "README.md",
   "peerDependencies": {
     "react": "^16.14.0",
-    "react-native": ">=0.60.0-rc.0 <1.0.x"
+    "react-native": "^0.61.5"
   },
   "devDependencies": {
     "auto-changelog": "^2.2.1",
