adjust example app to be able using production keys

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -137,7 +137,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example"
+        applicationId "org.gooddollar.facetec.example"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
