--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "version": "auto-changelog -p && git add CHANGELOG.md"
+    "release:publish": "semantic-release"
   },
   "repository": {
     "type": "git",
@@ -37,7 +37,8 @@
     "react-native": "^0.61.5"
   },
   "devDependencies": {
-    "auto-changelog": "^2.2.1",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "react": "^16.14.0",
     "react-native": "^0.61.5"
   }
