--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
+    "semantic-release": "^17.4.2",
     "react": "^16.14.0",
     "react-native": "^0.61.5"
   }
