--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -9,18 +9,8 @@ agent:
 execution_time_limit:
   minutes: 5
 
-blocks:
-  - name: Publish Artifact
-    dependencies:
-      - Create Artifact
-    task:
-      secrets:
-        - name: Github Package Access
-        - name: Github Commit Access
-      prologue:
-        commands:
-          - checkout
-      jobs:
-        - name: Publish to Github
-          commands:
-            - npm run release:publish
+promotions:
+  - name: Release Promotion
+    pipeline_file: release_artifact.yml
+    auto_promote:
+      when: "branch = 'master'"
