--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -10,11 +10,13 @@ execution_time_limit:
   minutes: 5
 
 blocks:
-  task:
-    jobs:
-      - name: Keep Semaphore Happy
-        commands:
-          - echo hello world
+  - name: Keep Semaphore Happy
+    dependencies: [ ]
+    task:
+      jobs:
+        - name: Hello World
+          commands:
+            - echo hello world
 
 promotions:
   - name: Release Promotion
