--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -4,12 +4,10 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '12.0'
 
 target 'example' do
-  use_modular_headers!
   config = use_native_modules!
   use_react_native!(:path => config["reactNativePath"])
 
-  pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec', :modular_headers => false
-  pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec', :modular_headers => false
+  pod 'secp256k1.c', '0.1.2', :modular_headers => true
 
   target 'exampleTests' do
     inherit! :complete
@@ -20,10 +18,10 @@ target 'example' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  # use_flipper!
-  # post_install do |installer|
-  #   flipper_post_install(installer)
-  # end
+  use_flipper!
+  post_install do |installer|
+    flipper_post_install(installer)
+  end
 end
 
 target 'example-tvOS' do
