--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "LICENSE"
   ],
   "scripts": {
+    "postinstall": "node ./post-install.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "version": "auto-changelog -p && git add CHANGELOG.md"
   },
@@ -41,5 +42,8 @@
     "auto-changelog": "^2.2.1",
     "react": "^16.14.0",
     "react-native": "^0.61.5"
+  },
+  "dependencies": {
+    "gently-copy": "^3.2.0"
   }
 }
